fix footer button on mobile screen

--- a/css/main.css
+++ b/css/main.css
@@ -237,13 +237,16 @@ footer .footer-buttom-text {
   font-size: 13px;
 }
 @media (max-width: 767px) {
+  footer {
+    padding: 0;
+  }
   footer .flexbox {
     flex-direction: column;
     align-items: center;
   }
-  footer .flexbox > * {
+  footer .flexbox {
     align-items: center;
-    /* border: solid; */
+    border: solid;
     width: 100%;
     text-align: center;
   }
